# reactor

./: README.md  pyproject.toml
reactor/: __init__.py  app.py  config.toml  email.py  users.py  xdg_toml_config.py
reactor/templates/email/: _base.txt  login.txt
reactor/templates/web/: _base.html  login.html  login_email_check.html  login_sent.html
tests/: test_reactor.py
