[tool.poetry]
name = "reactor"
version = "0.1.0"
description = ""
authors = ["Quint Guvernator <quint@guvernator.net>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-JWT = "^0.3.2"
tomlkit = "^0.7.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
